force-app/main/default/objects/IF_Log__c/IF_Log__c.object-meta.xml
<CustomObject>
    <description>Interface 처리 Log를 기록</description>
    <label>IF_Log</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}-{0000000}</displayFormat>
        <label>IF_Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IF_Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>