force-app/main/default/objects/IF_Log__c/fields/ExceptionType__c.field-meta.xml
<CustomField>
    <fullName>ExceptionType__c</fullName>
    <label>ExceptionType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>