force-app/main/default/objects/IF_Log__c/fields/FailCount__c.field-meta.xml
<CustomField>
    <fullName>FailCount__c</fullName>
    <description>Interface 처리 실패한 Record 수</description>
    <inlineHelpText>Interface 처리 실패한 Record 수</inlineHelpText>
    <label>FailCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>