force-app/main/default/objects/IF_Log__c/fields/InterfaceGuid__c.field-meta.xml
<CustomField>
    <fullName>InterfaceGuid__c</fullName>
    <label>InterfaceGuid</label>
    <length>100</length>
    <type>Text</type>
</CustomField>