force-app/main/default/objects/IF_Log__c/fields/LogType__c.field-meta.xml
<CustomField>
    <fullName>LogType__c</fullName>
    <description>Log Type은 Interface를 구분하는 것으로 Callout, Batch, WebService로 구분</description>
    <inlineHelpText>Log Type은 Interface를 구분하는 것으로 Callout, Batch, WebService로 구분</inlineHelpText>
    <label>LogType</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>