force-app/main/default/objects/IF_Log__c/fields/RequestMessage__c.field-meta.xml
<CustomField>
    <fullName>RequestMessage__c</fullName>
    <description>Request 정보</description>
    <inlineHelpText>Request 정보</inlineHelpText>
    <label>RequestMessage</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>