force-app/main/default/objects/IF_Log__c/fields/ResponseMessage2__c.field-meta.xml
<CustomField>
    <fullName>ResponseMessage2__c</fullName>
    <label>ResponseMessage2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>