force-app/main/default/objects/IF_Log__c/fields/ResponseMessage3__c.field-meta.xml
<CustomField>
    <fullName>ResponseMessage3__c</fullName>
    <label>ResponseMessage3</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>