force-app/main/default/objects/IF_Log__c/fields/SuccessCount__c.field-meta.xml
<CustomField>
    <fullName>SuccessCount__c</fullName>
    <description>Interface 처리 성공한 Record 수</description>
    <inlineHelpText>Interface 처리 성공한 Record 수</inlineHelpText>
    <label>SuccessCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>