force-app/main/default/objects/IF_Log__c/fields/TotalCount__c.field-meta.xml
<CustomField>
    <fullName>TotalCount__c</fullName>
    <description>Interface 처리한 Record 전체 수 (성공 + 실패)</description>
    <inlineHelpText>Interface 처리한 Record 전체 수 (성공 + 실패)</inlineHelpText>
    <label>TotalCount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>