force-app/main/default/objects/IF_Log__c/listViews/ALL_public.listView-meta.xml
<ListView>
    <fullName>ALL_public</fullName>
    <columns>NAME</columns>
    <columns>ApexName__c</columns>
    <columns>ApexMethod__c</columns>
    <columns>InterfaceId__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>StatusCode__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CpuTime__c</columns>
    <columns>ErrorMessage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>2/20/2024 12:00 AM</value>
    </filters>
    <label>ALL</label>
</ListView>