force-app/main/default/objects/IF_Log__c/listViews/Error_Check.listView-meta.xml
<ListView>
    <fullName>Error_Check</fullName>
    <columns>NAME</columns>
    <columns>ApexMethod__c</columns>
    <columns>ApexName__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>InterfaceId__c</columns>
    <columns>StatusCode__c</columns>
    <columns>ErrorMessage__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>StatusCode__c</field>
        <operation>notEqual</operation>
        <value>S</value>
    </filters>
    <label>Error Check</label>
</ListView>