force-app/main/default/objects/IF_Log__c/listViews/IF_017.listView-meta.xml
<ListView>
    <fullName>IF_017</fullName>
    <columns>NAME</columns>
    <columns>RequestMessage__c</columns>
    <columns>ApexName__c</columns>
    <columns>InterfaceId__c</columns>
    <columns>LogText__c</columns>
    <columns>ApexMethod__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>StatusCode__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>ErrorMessage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>InterfaceId__c</field>
        <operation>equals</operation>
        <value>APPROVAL_RESULT</value>
    </filters>
    <label>IF-017</label>
</ListView>