force-app/main/default/objects/IF_Log__c/listViews/IF_050.listView-meta.xml
<ListView>
    <fullName>IF_050</fullName>
    <columns>NAME</columns>
    <columns>ApexName__c</columns>
    <columns>InterfaceId__c</columns>
    <columns>ApexMethod__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>StatusCode__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>ErrorMessage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>InterfaceId__c</field>
        <operation>contains</operation>
        <value>050</value>
    </filters>
    <label>IF-050</label>
</ListView>