force-app/main/default/objects/IF_Log__c/listViews/IF_052.listView-meta.xml
<ListView>
    <fullName>IF_052</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>InterfaceId__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>StatusCode__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>InterfaceId__c</field>
        <operation>equals</operation>
        <value>IF-040</value>
    </filters>
    <label>IF-052</label>
</ListView>