force-app/main/default/objects/IF_Log__c/listViews/IF_075_LIST.listView-meta.xml
<ListView>
    <fullName>IF_075_LIST</fullName>
    <columns>NAME</columns>
    <columns>ApexMethod__c</columns>
    <columns>InterfaceId__c</columns>
    <columns>StatusCode__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>ResponseMessage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>InterfaceId__c</field>
        <operation>contains</operation>
        <value>075</value>
    </filters>
    <label>IF-075</label>
</ListView>