force-app/main/default/objects/IF_Log__c/listViews/IF_079.listView-meta.xml
<ListView>
    <fullName>IF_079</fullName>
    <columns>NAME</columns>
    <columns>ApexMethod__c</columns>
    <columns>InterfaceId__c</columns>
    <columns>StatusCode__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>ResponseMessage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>InterfaceId__c</field>
        <operation>equals</operation>
        <value>IF-079</value>
    </filters>
    <label>IF-079 (결재 상신)</label>
</ListView>