force-app/main/default/objects/IF_Log__c/listViews/IF_093_List.listView-meta.xml
<ListView>
    <fullName>IF_093_List</fullName>
    <columns>NAME</columns>
    <columns>ApexName__c</columns>
    <columns>InterfaceId__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>StatusCode__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>ErrorMessage__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>InterfaceId__c</field>
        <operation>contains</operation>
        <value>093</value>
    </filters>
    <label>IF-093</label>
</ListView>