force-app/main/default/objects/IF_Log__c/listViews/If_102.listView-meta.xml
<ListView>
    <fullName>If_102</fullName>
    <columns>NAME</columns>
    <columns>ApexName__c</columns>
    <columns>InterfaceId__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>StatusCode__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>ErrorMessage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>InterfaceId__c</field>
        <operation>equals</operation>
        <value>102</value>
    </filters>
    <label>If-102</label>
</ListView>