force-app/main/default/objects/IF_Log__c/listViews/IF_111_List.listView-meta.xml
<ListView>
    <fullName>IF_111_List</fullName>
    <columns>NAME</columns>
    <columns>ApexMethod__c</columns>
    <columns>InterfaceId__c</columns>
    <columns>StatusCode__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>ResponseMessage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>InterfaceId__c</field>
        <operation>contains</operation>
        <value>111</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>IF-111</label>
</ListView>