force-app/main/default/objects/IF_Log__c/listViews/IF_125_Search.listView-meta.xml
<ListView>
    <fullName>IF_125_Search</fullName>
    <columns>NAME</columns>
    <columns>ApexName__c</columns>
    <columns>InterfaceId__c</columns>
    <columns>ApexMethod__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>StatusCode__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>RequestMessage__c</columns>
    <columns>ResponseMessage__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>InterfaceId__c</field>
        <operation>contains</operation>
        <value>125</value>
    </filters>
    <label>IF-125</label>
</ListView>